--- a/ProjectName.nuspec
+++ b/ProjectName.nuspec
@@ -3,8 +3,8 @@
 		<metadata>
 			<id>ProjectName</id>
 			<version>2020.07.02</version>
-			<authors>RazTheKing</authors>
-			<owners>RazTheKing</owners>
+			<authors>RazE</authors>
+			<owners>RazE</owners>
 			<description>ExampleForNugetTarget, X64,X32,Release,Debug</description>
 			<releaseNotes>None</releaseNotes>
 			<copyright>Copyright 2020</copyright>
